# slack-bot-template

./: .envrc.example  README.md
slack-bot-cdk/: .gitignore  .prettierrc.json  cdk.json  generate_lambda_layer.sh  package-lock.json  package.json
slack-bot-cdk/lib/: slack-bot-cdk-stack.ts
slack-bot-cdk/test/: slack-bot-cdk.test.ts
slack-bot-cdk/utils/: environment.ts  utils.ts
slack-bot-impl/: app.py  handler.py  pyproject.toml  requirements.txt
